Switch to large Twitter image

--- a/src/components/FrontmatterMeta.astro
+++ b/src/components/FrontmatterMeta.astro
@@ -15,7 +15,7 @@ const fullImageURL = new URL(imageURL, Astro.site).toString();
 <meta name="description" content={description} />
 
 <meta name="twitter:creator" content="@mm_atthew" />
-<meta name="twitter:card" content="summary" />
+<meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:description" content={description} />
 <meta name="twitter:image" content={fullImageURL} />
 <meta property="og:url" content={Astro.url.href} />
