--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,6 +13,7 @@ const year = new Date().getFullYear();
       <a class="underline" href="https://github.com/matthewsanetra/blog"
         >Source</a
       >
+      <a class="underline" href="/rss.xml">RSS</a>
     </div>
   </div>
 </footer>
