--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -29,7 +29,7 @@ const { frontmatter } = Astro.props;
       {...frontmatter}
     />
   </head>
-  <body class="bg-yellow-50">
+  <body class="bg-yellow-50 overflow-x-hidden">
     <a
       href="#_main-content"
       class="font-serif transition left-0 bg-primary text-primary-content absolute p-3 m-3 -translate-y-16 focus:translate-y-0"
