--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,9 +2,11 @@
 ---
 
 <header>
-  <div class="py-4">
+  <div class="pt-4 pb-8">
     <span class="text-4xl font-extrabold">Matthew Sanetra</span>
-    <div class="flex flex-wrap gap-x-5 border-b border-b-gray-400">
+    <div
+      class="flex flex-wrap gap-x-5 border-b border-b-gray-400 py-1 underline-offset-2"
+    >
       <a href="/" class="hover:underline">About</a>
       <a href="/blog/" class="hover:underline">Blog</a>
       <a href="https://twitter.com/mm_atthew" class="hover:underline">Twitter</a
