--- a/src/components/mdx/Moomin.astro
+++ b/src/components/mdx/Moomin.astro
@@ -25,7 +25,7 @@ const image = images[which];
 >
   <div
     class:list={[
-      "rounded-3xl border border-b-2 border-gray-500 bg-slate-50 px-3 text-gray-800 prose-p:m-3",
+      "rounded-3xl border border-b-2 border-gray-500 bg-slate-50 px-3 text-gray-800 prose-p:m-3 w-fit",
       isRight ? "border-r-2" : "border-l-2",
     ]}
   >
