--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,5 +1,6 @@
 ---
 import BlogPost from "@layouts/BlogPost.astro";
+import BlogListEntry from "@components/BlogListEntry.astro";
 import { getCollection } from "astro:content";
 
 const posts = await getCollection("blog");
@@ -14,18 +15,15 @@ posts.sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf());
   }}
 >
   <h1>Blog</h1>
-  <ul>
-    {
-      posts.map((post) => (
-        <li>
-          <div class="flex gap-x-4 flex-wrap m-0">
-            <time datetime={post.data.date.toISOString()}>
-              {post.data.date.toISOString().split("T")[0]}
-            </time>
-            <a href={`/blog/${post.slug}/`}>{post.data.title}</a>
-          </div>
-        </li>
-      ))
-    }
-  </ul>
+  <div class="not-prose">
+    <ul class="list-none">
+      {
+        posts.map((post) => (
+          <li>
+            <BlogListEntry {...post.data} link={`/blog/${post.slug}/`} />
+          </li>
+        ))
+      }
+    </ul>
+  </div>
 </BlogPost>
