Darker post titles in blog index

--- a/src/components/BlogListEntry.astro
+++ b/src/components/BlogListEntry.astro
@@ -22,7 +22,9 @@ const formattedDate = stringifiedDate.split("T")[0];
         {formattedDate}
       </time>
       <div>
-        <span class="underline underline-offset-2 font-extrabold">{title}</span>
+        <span class="underline underline-offset-2 font-extrabold text-gray-800"
+          >{title}</span
+        >
         <p class="p-0 m-0">
           {description}
         </p>
