--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,4 +1,6 @@
 ---
+import type { CollectionEntry } from "astro:content";
+
 import Fonts from "@components/Fonts.astro";
 import Meta from "@components/Meta.astro";
 import FrontmatterMeta from "@components/FrontmatterMeta.astro";
@@ -6,12 +8,11 @@ import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 
 export interface Props {
-  frontmatter: {
-    title: string;
-    description: string;
-    image?: string;
-    date?: Date;
-  };
+  // In content, we want to make dates mandatory.
+  // However, in the layout, we want to make them optional because
+  // this layout is used by the home page and other pages, which don't
+  // want a date.
+  frontmatter: Omit<CollectionEntry<"blog">["data"], "date"> & { date?: Date };
 }
 
 const { frontmatter } = Astro.props;
@@ -41,6 +42,7 @@ const { frontmatter } = Astro.props;
         <article
           class="prose prose-a:underline-offset-2 prose-pre:border prose-pre:border-slate-500"
         >
+          <h1>{frontmatter.titleHeadingOverride ?? frontmatter.title}</h1>
           <slot />
         </article>
       </main>
