Improve SEO from Bing recommendation

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -10,7 +10,8 @@ const posts = await entries();
 
 <BlogPost
   frontmatter={{
-    title: "Blog",
+    title: "Blog Posts | Matthew Sanetra",
+    titleHeadingOverride: "Blog",
     description: "Browse the blog posts written by Matthew Sanetra",
   }}
 >
