--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,7 +1,7 @@
 ---
 import BlogPost from "@layouts/BlogPost.astro";
 import BlogListEntry from "@components/BlogListEntry.astro";
-import { entries } from "src/schemas/blog";
+import { entries } from "@schemas/blog";
 
 const posts = await entries();
 ---
