Refactor to shared schema

--- a/src/components/BlogListEntry.astro
+++ b/src/components/BlogListEntry.astro
@@ -22,7 +22,7 @@ const formattedDate = stringifiedDate.split("T")[0];
       </time>
       <div>
         <span class="underline underline-offset-2 font-extrabold text-gray-800"
-          >{post.titleHeadingOverride ?? post.title}</span
+          >{post.headingOverride ?? post.title}</span
         >
         <p class="p-0 m-0">
           {post.description}
