--- a/src/layouts/RootPage.astro
+++ b/src/layouts/RootPage.astro
@@ -1,8 +1,8 @@
 ---
-import type { RootPageInfo } from "@schemas/root";
+import type { RootPageData } from "@schemas/root";
 import SharedLayout from "./SharedLayout.astro";
 
-export type Props = RootPageInfo;
+export type Props = RootPageData;
 
 const page = Astro.props;
 ---
