--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,43 +1,27 @@
 ---
-import type { CollectionEntry } from "astro:content";
+import type { BlogData } from "@schemas/blog";
 
 import SharedLayout from "./SharedLayout.astro";
 
-export interface Props {
-  // In content, we want to make dates mandatory.
-  // However, in the layout, we want to make them optional because
-  // this layout is used by the home page and other pages, which don't
-  // want a date.
-  frontmatter: CollectionEntry<"blog">["data"];
-}
+export type Props = BlogData;
 
-const { frontmatter } = Astro.props;
-
-const heading = frontmatter.headingOverride ?? frontmatter.title;
+const page = Astro.props;
 ---
 
-<SharedLayout
-  meta={{
-    title: frontmatter.title,
-    description: frontmatter.description,
-    image: frontmatter.image,
-  }}
->
+<SharedLayout meta={page.meta}>
   <article
     class="prose prose-a:underline-offset-2 prose-pre:border prose-pre:border-slate-500"
   >
-    <h1 class:list={frontmatter.date ? "mb-0" : ""}>{heading}</h1>
-    {
-      frontmatter.date && (
-        <time class="text-gray-500" datetime={frontmatter.date.toISOString()}>
-          {frontmatter.date.toLocaleDateString("en-US", {
-            year: "numeric",
-            month: "long",
-            day: "numeric",
-          })}
-        </time>
-      )
-    }
+    <h1 class="mb-0">{page.heading}</h1>
+    <time class="text-gray-500" datetime={page.date.toISOString()}>
+      {
+        page.date.toLocaleDateString("en-US", {
+          year: "numeric",
+          month: "long",
+          day: "numeric",
+        })
+      }
+    </time>
     <slot />
   </article>
 </SharedLayout>
