--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -1,11 +1,11 @@
 ---
-import { getCollection } from "astro:content";
-
 import type { RootPageEntry } from "@schemas/root";
+import { entries } from "@schemas/root";
+
 import RootPage from "@layouts/RootPage.astro";
 
 export async function getStaticPaths() {
-  const pages = await getCollection("root");
+  const pages = await entries();
 
   return pages.map((page) => ({
     params: {
