--- a/src/layouts/SharedLayout.astro
+++ b/src/layouts/SharedLayout.astro
@@ -21,10 +21,10 @@ const { meta } = Astro.props;
     <Meta />
     <FrontmatterMeta {...meta} />
   </head>
-  <body class="bg-yellow-50 overflow-x-hidden">
+  <body class="overflow-x-hidden bg-yellow-50">
     <a
       href="#_main-content"
-      class="font-serif transition left-0 bg-primary text-primary-content absolute p-3 m-3 -translate-y-16 focus:translate-y-0"
+      class="bg-primary text-primary-content absolute left-0 m-3 -translate-y-16 p-3 font-serif transition focus:translate-y-0"
       >Skip to main content</a
     >
     <div class="mx-auto max-w-screen-md px-4 font-serif">
