--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,12 +3,12 @@ const year = new Date().getFullYear();
 ---
 
 <footer class="pt-4">
-  <div class="text-center border-t py-4 border-t-gray-400">
-    <div class="py-1 flex flex-wrap justify-center gap-x-1">
+  <div class="border-t border-t-gray-400 py-4 text-center">
+    <div class="flex flex-wrap justify-center gap-x-1 py-1">
       <span>Made with &hearts; by Matthew Sanetra.</span>
       <span>Copyright &copy; {year}</span>
     </div>
-    <div class="py-1 flex flex-wrap justify-center gap-x-4">
+    <div class="flex flex-wrap justify-center gap-x-4 py-1">
       <a class="underline" href="/attributions/">Attributions</a>
       <a class="underline" href="https://github.com/matthewsanetra/blog"
         >Source</a
