--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,9 +1,10 @@
 ---
 import type { BlogData } from "@schemas/blog";
+import type { MarkdownHeading } from "astro";
 
 import SharedLayout from "./SharedLayout.astro";
 
-export type Props = BlogData;
+export type Props = BlogData & { headings: MarkdownHeading[] };
 
 const page = Astro.props;
 ---
@@ -22,6 +23,27 @@ const page = Astro.props;
         })
       }
     </time>
+    {
+      page.toc && (
+        <div class="not-prose pt-4">
+          <div class="rounded-sm border border-gray-500 bg-white p-4">
+            <h2 class="text-2xl font-semibold text-gray-800">Contents</h2>
+            <ol class="ml-4 list-outside list-decimal p-1">
+              {page.headings.map((heading) => (
+                <li>
+                  <a
+                    href={`#${heading.slug}`}
+                    class="font-semibold text-gray-800 underline underline-offset-2"
+                  >
+                    {heading.text}
+                  </a>
+                </li>
+              ))}
+            </ol>
+          </div>
+        </div>
+      )
+    }
     <slot />
   </article>
 </SharedLayout>
