--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -15,15 +15,31 @@ const page = Astro.props;
     class="prose prose-a:underline-offset-2 prose-pre:border prose-pre:border-slate-500"
   >
     <h1 class="mb-0">{page.heading}</h1>
-    <time class="text-gray-500" datetime={page.date.toISOString()}>
+    <span class="text-gray-500">
+      <time datetime={page.date.toISOString()}>
+        {
+          page.date.toLocaleDateString("en-US", {
+            year: "numeric",
+            month: "long",
+            day: "numeric",
+          })
+        }
+      </time>
       {
-        page.date.toLocaleDateString("en-US", {
-          year: "numeric",
-          month: "long",
-          day: "numeric",
-        })
+        page.meta.lastModified && (
+          <>
+            | Last updated
+            <time datetime={page.meta.lastModified.toISOString()}>
+              {page.meta.lastModified.toLocaleDateString("en-US", {
+                year: "numeric",
+                month: "long",
+                day: "numeric",
+              })}
+            </time>
+          </>
+        )
       }
-    </time>
+    </span>
     {page.toc && <ContentsTable headings={page.headings} />}
     <slot />
   </article>
