--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,19 +1,33 @@
 ---
+import { getNavbarList } from "@schemas/root";
+
+const pages = await getNavbarList();
+const navbarList = [
+  ...pages,
+  {
+    title: "Twitter",
+    href: "https://twitter.com/mm_atthew",
+  },
+  {
+    title: "Github",
+    href: "https://github.con/matthewsanetra",
+  },
+];
 ---
 
 <header>
   <div class="pt-4 pb-8">
     <span class="text-4xl font-extrabold">Matthew Sanetra</span>
     <div
-      class="flex flex-wrap gap-x-5 border-b border-b-gray-400 py-1 underline-offset-2"
+      class="flex flex-wrap gap-x-4 border-b border-b-gray-400 py-1 underline-offset-2"
     >
-      <a href="/" class="hover:underline">About</a>
-      <a href="/blog/" class="hover:underline">Blog</a>
-      <a href="https://twitter.com/mm_atthew" class="hover:underline">Twitter</a
-      >
-      <a href="https://github.com/matthewsanetra" class="hover:underline"
-        >Github</a
-      >
+      {
+        navbarList.map(({ title, href }) => (
+          <a href={href} class="hover:underline">
+            {title}
+          </a>
+        ))
+      }
     </div>
   </div>
 </header>
