Fix typo in Github link

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@ const navbarList = [
   },
   {
     title: "Github",
-    href: "https://github.con/matthewsanetra",
+    href: "https://github.com/matthewsanetra",
   },
 ];
 ---
