Account for noscript users

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -54,6 +54,10 @@ const page = Astro.props;
         crossorigin="anonymous"
         async
       ></script>
+      <noscript>
+        Please enable JavaScript to view the
+        <a href="https://utteranc.es/">comments powered by Utteranc.es</a>.
+      </noscript>
     </div>
   </article>
 </SharedLayout>
