Migrate @alias to ~alias

--- a/src/components/BlogList.astro
+++ b/src/components/BlogList.astro
@@ -1,7 +1,7 @@
 ---
-import BlogListEntry from "@components/BlogListEntry.astro";
+import BlogListEntry from "~components/BlogListEntry.astro";
 
-import { entries } from "@schemas/blog";
+import { entries } from "~schemas/blog";
 
 const posts = await entries();
 ---
