--- a/src/components/BlogListEntry.astro
+++ b/src/components/BlogListEntry.astro
@@ -1,5 +1,5 @@
 ---
-import type { BlogData } from "@schemas/blog";
+import type { BlogData } from "~schemas/blog";
 
 export type Props = BlogData & {
   link: string;
