--- a/src/components/FrontmatterMeta.astro
+++ b/src/components/FrontmatterMeta.astro
@@ -1,5 +1,5 @@
 ---
-import { previews } from "@components/mdx/socialPreviews";
+import { previews } from "~components/mdx/socialPreviews";
 
 export interface Props {
   title: string;
