--- a/src/components/Meta.astro
+++ b/src/components/Meta.astro
@@ -1,8 +1,8 @@
 ---
 // Favicons and site.webmanifest ported from favicon.io to use Astro assets
-import apple_touch_icon from "@assets/favicons/apple-touch-icon.png";
-import favicon_32x32 from "@assets/favicons/favicon-32x32.png";
-import favicon_16x16 from "@assets/favicons/favicon-16x16.png";
+import apple_touch_icon from "~assets/favicons/apple-touch-icon.png";
+import favicon_32x32 from "~assets/favicons/favicon-32x32.png";
+import favicon_16x16 from "~assets/favicons/favicon-16x16.png";
 ---
 
 <link rel="canonical" href={Astro.url.href} />
