--- a/src/layouts/RootPage.astro
+++ b/src/layouts/RootPage.astro
@@ -1,5 +1,5 @@
 ---
-import type { RootPageData } from "@schemas/root";
+import type { RootPageData } from "~schemas/root";
 import SharedLayout from "./SharedLayout.astro";
 
 export type Props = RootPageData;
