--- a/src/layouts/SharedLayout.astro
+++ b/src/layouts/SharedLayout.astro
@@ -1,11 +1,11 @@
 ---
-import Fonts from "@components/Fonts.astro";
-import Meta from "@components/Meta.astro";
-import FrontmatterMeta from "@components/FrontmatterMeta.astro";
-import Header from "@components/Header.astro";
-import Footer from "@components/Footer.astro";
+import Fonts from "~components/Fonts.astro";
+import Meta from "~components/Meta.astro";
+import FrontmatterMeta from "~components/FrontmatterMeta.astro";
+import Header from "~components/Header.astro";
+import Footer from "~components/Footer.astro";
 
-import type { RootPageData } from "@schemas/root";
+import type { RootPageData } from "~schemas/root";
 
 export type Props = { meta: RootPageData["meta"] };
 
