--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -1,8 +1,8 @@
 ---
-import type { RootPageEntry } from "@schemas/root";
-import { entries } from "@schemas/root";
+import type { RootPageEntry } from "~schemas/root";
+import { entries } from "~schemas/root";
 
-import RootPage from "@layouts/RootPage.astro";
+import RootPage from "~layouts/RootPage.astro";
 
 export async function getStaticPaths() {
   const pages = await entries();
