Change background colour

--- a/src/layouts/SharedLayout.astro
+++ b/src/layouts/SharedLayout.astro
@@ -21,7 +21,7 @@ const { meta } = Astro.props;
     <Meta />
     <FrontmatterMeta {...meta} />
   </head>
-  <body class="overflow-x-hidden bg-yellow-50">
+  <body class="overflow-x-hidden bg-[#fcfcf0]">
     <a
       href="#_main-content"
       class="bg-primary text-primary-content absolute left-0 m-3 -translate-y-16 p-3 font-serif transition focus:translate-y-0"
