Unnecessary class:list

--- a/src/components/mdx/Char.astro
+++ b/src/components/mdx/Char.astro
@@ -30,6 +30,6 @@ const isRight = side == "right";
     <slot />
   </div>
   <div class:list={["not-prose -mb-10 -mt-10", isRight ? "-mr-32" : "-ml-32"]}>
-    <img alt={alt} class:list={["w-32", "h-32"]} src={image} />
+    <img alt={alt} class="h-32 w-32" src={image} />
   </div>
 </div>
