--- a/src/components/mdx/Char.astro
+++ b/src/components/mdx/Char.astro
@@ -17,7 +17,7 @@ const isRight = side == "right";
 
 <div
   class:list={[
-    "flex items-end justify-end",
+    "flex items-center justify-end",
     !isRight ? "flex-row-reverse" : "",
   ]}
 >
@@ -29,7 +29,12 @@ const isRight = side == "right";
   >
     <slot />
   </div>
-  <div class:list={["not-prose -mb-10 -mt-10", isRight ? "-mr-32" : "-ml-32"]}>
-    <img alt={alt} class="h-32 w-32" src={image} />
+  <div
+    class:list={[
+      "not-prose lg:-mb-10 lg:-mt-10",
+      isRight ? "pl-2 lg:pl-0 lg:-mr-32" : "pr-2 lg:pl-0 lg:-ml-32",
+    ]}
+  >
+    <img alt={alt} class="h-24 w-24 lg:h-32 lg:w-32" src={image} />
   </div>
 </div>
