Update theme colour in meta

--- a/src/components/Meta.astro
+++ b/src/components/Meta.astro
@@ -13,4 +13,4 @@ import favicon_16x16 from "~assets/favicons/favicon-16x16.png";
 <link rel="icon" type="image/png" sizes="16x16" href={favicon_16x16} />
 <link rel="manifest" href="/site.webmanifest" />
 
-<meta name="theme-color" content="#fefce8" />
+<meta name="theme-color" content="#fcfcf0" />
