Adjust mobile padding

--- a/src/components/mdx/Char.astro
+++ b/src/components/mdx/Char.astro
@@ -23,7 +23,7 @@ const isRight = side == "right";
 >
   <div
     class:list={[
-      "rounded-3xl border border-b-2 border-gray-500 bg-zinc-50 px-3 text-gray-800 prose-p:m-3 w-fit",
+      "rounded-3xl border border-b-2 border-gray-500 bg-zinc-50 px-3 text-gray-800 prose-p:sm:mx-3 prose-p:my-3 prose-p:mx-1 w-fit",
       isRight ? "border-r-2" : "border-l-2",
     ]}
   >
