--- a/src/components/mdx/Char.astro
+++ b/src/components/mdx/Char.astro
@@ -32,7 +32,7 @@ const isRight = side == "right";
   <div
     class:list={[
       "not-prose lg:-mb-10 lg:-mt-10",
-      isRight ? "pl-2 lg:pl-0 lg:-mr-32" : "pr-2 lg:pl-0 lg:-ml-32",
+      isRight ? "pl-2 lg:pl-0 lg:-mr-32" : "pr-2 lg:pr-0 lg:-ml-32",
     ]}
   >
     <img alt={alt} class="h-24 w-24 lg:h-32 lg:w-32" src={image} />
