--- a/src/components/mdx/Char.astro
+++ b/src/components/mdx/Char.astro
@@ -31,7 +31,7 @@ const isRight = side == "right";
   </div>
   <div
     class:list={[
-      "not-prose lg:-mb-10 lg:-mt-10",
+      "not-prose -mt-24 -mb-24",
       isRight ? "pl-2 lg:pl-0 lg:-mr-32" : "pr-2 lg:pr-0 lg:-ml-32",
     ]}
   >
