--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -14,7 +14,7 @@ const page = Astro.props;
 
 <SharedLayout meta={page.meta}>
   <article
-    class="prose prose-a:underline-offset-2 prose-pre:border prose-pre:border-slate-500"
+    class="prose prose-a:underline-offset-2 prose-code:font-medium prose-pre:border prose-pre:border-slate-500"
   >
     <h1 class="mb-0">{page.heading}</h1>
     <span class="text-gray-500">
