Move common article to SharedLayout

--- a/src/layouts/SharedLayout.astro
+++ b/src/layouts/SharedLayout.astro
@@ -30,7 +30,11 @@ const { meta } = Astro.props;
     <div class="mx-auto max-w-screen-md px-4 font-serif">
       <Header />
       <main id="_main-content">
-        <slot />
+        <article
+          class="prose prose-a:underline-offset-2 prose-code:font-medium prose-pre:border prose-pre:border-slate-500"
+        >
+          <slot />
+        </article>
       </main>
       <Footer />
     </div>
