--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ const navbarList = [
     href: "https://twitter.com/mm_atthew",
   },
   {
-    title: "Github",
+    title: "GitHub",
     href: "https://github.com/matthewsanetra",
   },
 ];
